// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional-call.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(getConsoleLog?.())\`\`;

=====================================output=====================================
(getConsoleLog?.())\`\`;

================================================================================
`;

exports[`optional-chaining.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(console?.log)\`\`;

=====================================output=====================================
(console?.log)\`\`;

================================================================================
`;

exports[`optional-multiple-chaining.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(console.log?.log)\`\`;
(console?.log.log)\`\`;

=====================================output=====================================
(console.log?.log)\`\`;
(console?.log.log)\`\`;

================================================================================
`;

exports[`optional-multiple-chaining-call.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(getConsoleLog.log.log?.())\`\`;
(getConsoleLog.log?.log())\`\`;
(getConsoleLog?.log.log())\`\`;

=====================================output=====================================
(getConsoleLog.log.log?.())\`\`;
(getConsoleLog.log?.log())\`\`;
(getConsoleLog?.log.log())\`\`;

================================================================================
`;
